# Payload-Dumper-Android-PL

./: .gitignore  README.md  build.gradle.kts  gradle.properties  lumo.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rajmani7584/payloaddumper/: MainActivity.kt
app/src/main/java/com/rajmani7584/payloaddumper/model/: DataModel.kt  DumpService.kt  ExplorerModel.kt  Payload.kt  SettingModel.kt  SettingsData.kt  SettingsRepo.kt  Utils.kt
app/src/main/java/com/rajmani7584/payloaddumper/nativeHelper/: PayloadDumper.kt
app/src/main/res/drawable/: github_lockup_black.xml  outline_sync_24.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pl-PL/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/: libs.versions.toml
lib/payload-dumper-android-rs/: Cargo.toml  build.rs  build.sh  part_manifest.proto  update_metadata.proto
lib/payload-dumper-android-rs/src/: lib.rs  main.rs
lib/payload-dumper-android-rs/src/engine/: chromeos_update_engine.rs  mod.rs  part_manifest.rs
lib/payload-dumper-android-rs/src/helper/: constants.rs  errors.rs
lib/payload-dumper-android-rs/src/payload/: dump.rs  header.rs  mod.rs
lib/payload-dumper-android-rs/src/reader/: local_reader.rs  mod.rs  remote_reader.rs  zip_reader.rs
(+59 files in other folders)
